Lv-181.Java | LVJAVS-122 | Fixed sonar issue